--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -2,29 +2,35 @@
 
 {
   "env": {
-      "browser": true,
-      "es2021": true
+    "browser": true,
+    "es2021": true
   },
   "extends": [
-      "plugin:react/recommended"
+    "plugin:react/recommended"
   ],
   "overrides": [
-      {
-          "excludedFiles": [],
-          "files": "",
-          "rules": {
-              "jsx-a11y/click-events-have-key-events": "off",
-              "react/prop-types": "off"
-          }
+    {
+      "excludedFiles": [],
+      "files": "",
+      "rules": {
+        "jsx-a11y/click-events-have-key-events": "off",
+        "react/prop-types": "off"
       }
+    }
   ],
   "parserOptions": {
-      "ecmaVersion": "latest",
-      "sourceType": "module"
+    "ecmaVersion": "latest",
+    "sourceType": "module"
   },
   "plugins": [
-      "react"
+    "react"
   ],
   "rules": {
-  }
+  },
+  "settings": {
+    "react": {
+      "version": "detect" 
+    }
+  },
+  "root": true 
 }
