add shadow to items, apply ui feedback recommendation to make index.js background darker than image cards

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -26,6 +26,9 @@
     "react"
   ],
   "rules": {
+    "no-multi-spaces": "error",
+    "no-trailing-spaces": "error",
+    "semi": ["error", "always"]
   },
   "settings": {
     "react": {
