--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -26,9 +26,9 @@
     "react"
   ],
   "rules": {
-    "no-multi-spaces": "error",
-    "no-trailing-spaces": "error",
-    "semi": ["error", "always"]
+    // "no-multi-spaces": "error",
+    // "no-trailing-spaces": "error",
+    // "semi": ["error", "always"]
   },
   "settings": {
     "react": {
